[package]
name = "rust_blog"
version = "0.1.0"
edition = "2021"

# See more .gukeys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[[test]]
#name = "test"
#path = "tests"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3",features = ["env-filter"]}
tokio = "1.25.0"
serde_json = {version = "1.0.91",features = []}
serde = {version = "1.0.152",features = ["derive"]}
derive_more = "0.99.17"
chrono = "0.4.23"
# actix
actix-web = "4"
actix-easy-multipart = "3.0.0"
actix-cors = "0.6.4"
actix-session = {version = "0.7.2" ,features = ['cookie-session']}
futures-util = "0.3.26"

# ORM
#rbatis deps
rbs = { version = "4.5"}
rbatis = { version = "4.5"}
rbdc-sqlite = { version = "4.5" }
pulldown-cmark = "0.10.0"
#markdown = "1.0.0-alpha.16"

